# race-drone-ide

./: .gitignore  CMakeLists.txt  README.md  race-drone-ide.kdev4
src/: main.cpp
src/controller/: devicecontroller.cpp  devicecontroller.h
src/model/: cmdqueue.cpp  cmdqueue.h  racedronedata.h  videoframefeed.cpp  videoframefeed.h
src/ui/: qanimationcontrol.cpp  qanimationcontrol.h  qanimationcontrol.ui  qdrivecontrol.cpp  qdrivecontrol.h  qdrivecontrol.ui  qdronedashboard.cpp  qdronedashboard.h  qdronedashboard.ui  qdronedesktop.cpp  qdronedesktop.h  qdronedesktop.ui  qimageprovider.cpp  qimageprovider.h  qvideodisplay.cpp  qvideodisplay.h  qvideodisplay.ui
